# SympleCode

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  LICENSE  Makefile  Mangling.txt  NPP Plugin.xml  README.md  SimpleCode.sln  SimpleCode.vcxproj  SimpleCode.vcxproj.filters  SympleCode.sln  Syntax.txt  Todo.md  dbgout.txt  premake5.lua
CommenSense/: Ast.cs  AstUtil.cs  Builder.Scope.cs  Builder.cs  CommenSense.csproj  Compiler.cs  ExprParser.cs  LLVMExt.cs  Lexer.cs  Parser.cs  Paser.Scope.cs  Program.cs  Resolver.cs  StmtParser.cs  SyntaxError.cs  Token.cs  Util.cs  ast.txt
CommenSense/Ast/: Ast.cs  AstUtil.cs
CommenSense/BadCode/: BadCode.cs  CastVerifier.cs  SyntaxError.cs
CommenSense/Builder/: Builder.cs  DeclBuilder.cs  ExprBuilder.cs  PtrBuilder.cs  Scope.cs  TypeBuilder.cs
CommenSense/Parser/: ExprInfo.cs  ExprParser.cs  Lexer.cs  Parser.cs  Paser.Scope.cs  PreParser.cs  StaticParser.cs  StmtParser.cs  TypeParser.cs
CommenSense/Preprocessor/: Preprocessor.cs
CommenSense/Properties/: launchSettings.json
Examples/: Code.sy  Hello World.sy  Libc.sy  Test.sy  Tic Tac Toe.sy
SuperCode/: .editorconfig  BadSymbol.cs  BuiltinTypes.cs  Code.ll  Code.sy  CodeGen.cs  Emitter.cs  ExprNode.cs  LLVMALittleBitBald.cs  Lexer.cs  Main.sy  Node.cs  Noder.cs  Parser.cs  PermaSafe.cs  Program.cs  SuperCode.csproj  SuperCode.sln  Symbol.cs  SympleCode.cs  Test.sy  Token.cs
SuperCode/Ast/: Ast.cs  AstKind.cs  BinExprAst.cs  LitExprAst.cs
SuperCode/CodeGen/: AddrCG.cs  CodeGen.cs  ExprCG.cs  MemCG.cs  StmtCG.cs
SuperCode/Node/: AssignExprNode.cs  BinExprNode.cs  CallExprNode.cs  CastExprNode.cs  DeclFuncMemNode.cs  ExprNode.cs  FNumExprNode.cs  FieldNode.cs  FuncExprNode.cs  FuncMemNode.cs  IfStmtNode.cs  MemExprNode.cs  MemNode.cs  ModuleNode.cs  Node.cs  NodeKind.cs  Noder.cs  NumExprNode.cs  ParamNode.cs  RetStmtNode.cs  StmtNode.cs  StrExprNode.cs  StructMemNode.cs  SymExprNode.cs  TypeNode.cs  TypePromise.cs  TypePunExprNode.cs  TypedefStmtNode.cs  UnExprNode.cs  VarExprNode.cs  VarMemNode.cs  VarStmtNode.cs  WhileStmtNode.cs
SuperCode/Properties/: launchSettings.json
SuperCode/Syntax/: ExprParser.cs  Lexer.cs  MemParser.cs  Parser.cs  StmtParser.cs  Token.cs  TokenFacts.cs
SympleCode/: SympleCode.sln  SympleCode.vcxproj  SympleCode.vcxproj.filters
SympleCode/SympleCode/: SympleCode.vcxproj  SympleCode.vcxproj.filters
SympleCode/VirtualMachine/: VirtualMachine.vcxproj  VirtualMachine.vcxproj.filters
SympleCode/src/: Application.cpp  scompiler.cpp  scompiler.h  sparser.cpp  sparser.h  sserializer.hpp  ssyntax_tree.cpp  ssyntax_tree.h  test.cpp
SympleCompiler/: Main.symple  Main.syt  Parser.cpp  Parser.hpp  SympleCompiler.vcxproj  SympleCompiler.vcxproj.filters  Test.s  __staticinit.s  asm-suf.~temp  premake5.lua  stdio.sy  ~temp.s
SympleCompiler/c (test)/: TicTacToe.c  (+1 more)
SympleEditor/: premake5.lua
SympleLang/: Makefile  premake5.lua
SympleRuntime/: SympleRuntime.vcxproj  SympleRuntime.vcxproj.filters  premake5.lua
TextMaity/: Grammars.pkgdef  TextMaity.csproj  TextMaity.sln  source.extension.vsixmanifest
res/: tutorial.smpl
samples/: glfwgame.sy  link.sy  loading.sy  other.sy  sieve.sy  test.sy  test2.sy
src/: Application.cpp  main.cpp  pch.h  sparser.cpp  sparser.h  svm.cpp  svm.h
test/: test.tree  tree.txt
(+668 files in other folders)
